--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ROCK PAPER SCISSORS</title>
-    <link rel="stylesheet" href="RockPaperScissor!.css">
+    <link rel="stylesheet" href="style.css">
     
 </head>
 <body>
@@ -32,6 +32,6 @@
     <div class="msg-container">
         <p id="msg">Play your move</p>
     </div>
-    <script src="RockPaperScissor!!.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
